@@ -3201,32 +3201,32 @@ proc gdb_gcore_cmd {core test} {
 proc gdb_core_cmd { core test } {
     global gdb_prompt
 
-    gdb_test_multiple "core $core" "re-load generated corefile" {
+    gdb_test_multiple "core $core" "$test" {
 	-re "\\\[Thread debugging using \[^ \r\n\]* enabled\\\]\r\n" {
 	    exp_continue
 	}
 	-re " is not a core dump:.*\r\n$gdb_prompt $" {
-	    fail "re-load generated corefile (bad file format)"
+	    fail "$test (bad file format)"
 	    return -1
 	}
 	-re ": No such file or directory.*\r\n$gdb_prompt $" {
-	    fail "re-load generated corefile (file not found)"
+	    fail "$test (file not found)"
 	    return -1
 	}
 	-re "Couldn't find .* registers in core file.*\r\n$gdb_prompt $" {
-	    fail "re-load generated corefile (incomplete note section)"
+	    fail "$test (incomplete note section)"
 	    return 0
 	}
 	-re "Core was generated by .*\r\n$gdb_prompt $" {
-	    pass "re-load generated corefile"
+	    pass "$test"
 	    return 1
 	}
 	-re ".*$gdb_prompt $" {
-	    fail "re-load generated corefile"
+	    fail "$test"
 	    return -1
 	}
 	timeout {
-	    fail "re-load generated corefile (timeout)"
+	    fail "$test (timeout)"
 	    return -1
 	}
     }
